import { newSpecPage } from '@stencil/core/testing'
import { NavigationComponent } from './navigation.component'

describe('tf-navigation', () => {
  it('renders', async () => {
    const { root } = await newSpecPage({
      components: [NavigationComponent],
      html: '<tf-navigation />',
    })
    expect(root).toEqualHtml(`
      <tf-navigation>
        <mock:shadow-root>
          <div>
            Hello, World! I'm
          </div>
        </mock:shadow-root>
      </tf-navigation>
    `)
  })

  it('renders with values', async () => {
    const { root } = await newSpecPage({
      components: [NavigationComponent],
      html: `<tf-navigation first="Stencil" last="'Don't call me a framework' JS" />`,
    })
    expect(root).toEqualHtml(`
      <tf-navigation first="Stencil" last="'Don't call me a framework' JS">
        <mock:shadow-root>
          <div>
            Hello, World! I'm Stencil 'Don't call me a framework' JS
          </div>
        </mock:shadow-root>
      </tf-navigation>
    `)
  })
})
